--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -25,3 +25,13 @@ EXPOSE 3000
 
 # 9. Start the server
 CMD ["node", "dist/index.js"]
+
+# ... existing build steps ...
+
+# 1. FIX: Configure Linux to prefer IPv4 networking
+# This solves the "network is unreachable" error for Supabase/Neon/etc.
+RUN echo "precedence ::ffff:0:0/96 100" >> /etc/gai.conf
+
+# 2. EXPOSE and START
+EXPOSE 3000
+CMD ["node", "dist/index.js"]
