--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,15 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "fastify": "^4.24.3",
     "@fastify/cors": "^8.4.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
+    "knex": "^3.1.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
     "@types/node": "^20.8.10",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
