--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "NodeNext",             // <--- CHANGED: Was "commonjs"
+    "moduleResolution": "NodeNext",   // <--- ADDED: Needed for ESM
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
