some more dpeloy fixes

--- a/backend/ai/Dockerfile
+++ b/backend/ai/Dockerfile
@@ -4,17 +4,16 @@ FROM python:3.11-slim
 # Set working directory inside container
 WORKDIR /app
 
-# 1. Install dependencies first (Caching layer)
-# This prevents re-installing all pip packages every time you change 1 line of code.
+# 1. Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # 2. Copy the rest of the application code
 COPY . .
 
-# Expose the port
+# (Optional) Documentation only - Render ignores this effectively
 EXPOSE 8000
 
-# Start the application
-# host 0.0.0.0 is required for Docker to expose the server outside the container
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# 3. FIX: Use 'sh -c' to read the $PORT variable provided by Render
+# We default to 8000 if $PORT is not set (useful for local testing)
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
